--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
+    "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.13",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.11",
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
