--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.2.10",
     "gatsby-plugin-google-tagmanager": "^2.1.7",
     "gatsby-plugin-manifest": "^2.2.6",
+    "gatsby-plugin-mdx": "^1.0.44",
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-react-svg": "^2.1.2",
@@ -22,7 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "typeface-questrial": "^0.0.72"
+    "react-markdown": "^4.2.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
