--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-markdown": "^4.2.2"
   },
   "devDependencies": {
